--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -35,7 +35,7 @@
         target="_blank"
         rel="noopener"
         aria-label="LinkedIn"
-        class="p-2 inline-block rounded-full border border-gray-300 text-gray-300 hover:text-gray-800 hover:border-gray-800 cursor-pointer transition-colors dark:border-gray-600 dark:text-gray-600 dark:hover:border-gray-300 dark:hover:text-gray-300"
+	class="p-2 inline-block rounded-full border border-gray-800 text-gray-800 dark:border-gray-300 dark:text-gray-300"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -176,6 +176,61 @@
           <path d="M9 3.6c5 6 7 10.5 7.5 16.2" />
           <path d="M6.4 19c3.5 -3.5 6 -6.5 14.5 -6.4" />
           <path d="M3.1 10.75c5 0 9.814 -.38 15.314 -5" />
+        </svg>
+      </a>
+    </li>
+    {{ end }}
+    {{ with .Site.Params.homepage.social.mail }}
+    <li>
+      <a
+        href="{{.}}"
+        target="_blank"
+        rel="noopener"
+        aria-label="Medium"
+	class="p-2 inline-block rounded-full border border-gray-800 text-gray-800 dark:border-gray-300 dark:text-gray-300"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-mail"
+          width="20"
+          height="20"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+	  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+	  <rect x="3" y="5" width="18" height="14" rx="2" />
+	  <polyline points="3 7 12 13 21 7" />
+        </svg>
+      </a>
+    </li>
+    {{ end }}
+    {{ with .Site.Params.homepage.social.phone }}
+    <li>
+      <a
+        href="tel:+49 17677904604"
+        target="_blank"
+        rel="noopener"
+        aria-label="Phone"
+	class="p-2 inline-block rounded-full border border-gray-800 text-gray-800 dark:border-gray-300 dark:text-gray-300"
+      >
+        <svg
+	  xmlns="http://www.w3.org/2000/svg"
+	  class="icon icon-tabler icon-tabler-phone"
+	  width="20"
+	  height="20"
+	  viewBox="0 0 24 24"
+	  stroke-width="1.5"
+	  stroke="currentColor"
+	  fill="none"
+	  stroke-linecap="round"
+	  stroke-linejoin="round"
+	>
+  	  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+  	  <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
         </svg>
       </a>
     </li>
